objects/MA_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>ARR__c</fullName>
        <label>ARR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASP__c</fullName>
        <label>ASP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Analysis_Date__c</fullName>
        <label>Analysis Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cap_Table_Summary__c</fullName>
        <label>Cap Table Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cash_Burn_Monthly__c</fullName>
        <label>Cash Burn (Monthly)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>CI/CD</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code_Name__c</fullName>
        <label>Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Summary__c</fullName>
        <inlineHelpText>Brief information about what the company does.</inlineHelpText>
        <label>Company Summary</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Copado_in_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copado in Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customers__c</fullName>
        <label># Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label># Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exclusivity_Expiration__c</fullName>
        <label>Exclusivity Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Extension_Option_Days__c</fullName>
        <label>Extension Option (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Score_Reasoning__c</fullName>
        <label>Finance Score Reasoning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finance_Score__c</fullName>
        <label>Finance Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gross_Retention_Rate__c</fullName>
        <label>Gross Retention Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Growth_Rate__c</fullName>
        <label>Growth Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HQ_Location__c</fullName>
        <label>HQ Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insight_in_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insight in Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Financials_Date__c</fullName>
        <label>Latest Financials Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Logo_Retention_Rate__c</fullName>
        <label>Logo Retention Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>Strategy</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Retention_Rate__c</fullName>
        <label>Net Retention Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Next_Contact__c</fullName>
        <label>Next Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Score_Reasoning__c</fullName>
        <label>Operations Score Reasoning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operations_Score__c</fullName>
        <label>Operations Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>ServiceNow</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Oracle NetSuite</fullName>
                </value>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Name__c</fullName>
        <label>Primary Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Score_Reasoning__c</fullName>
        <label>Product Score Reasoning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Score__c</fullName>
        <label>Product Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_Gate__c</fullName>
        <label>Quality Gate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gate 1</fullName>
                </value>
                <value>
                    <fullName>Gate 2</fullName>
                </value>
                <value>
                    <fullName>Gate 3</fullName>
                </value>
                <value>
                    <fullName>Gate 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exploration</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>LOI Negotiation</fullName>
                </value>
                <value>
                    <fullName>Contract Negotiation</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Backburner</fullName>
                    <isActive>false</isActive>
                    <label>Backburner</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <isActive>false</isActive>
                    <label>Cancelled</label>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                    <isActive>false</isActive>
                    <label>Closed Won</label>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <isActive>false</isActive>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pre-LOI Diligence</fullName>
                    <isActive>false</isActive>
                    <label>Pre-LOI Diligence</label>
                </value>
                <value>
                    <fullName>Relationship Cultivation</fullName>
                    <isActive>false</isActive>
                    <label>Relationship Cultivation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Developing</fullName>
                </value>
                <value>
                    <fullName>Relationship Building</fullName>
                </value>
                <value>
                    <fullName>Waiting for NDA Signature</fullName>
                </value>
                <value>
                    <fullName>Pre-LOI Diligence/Negotiation</fullName>
                </value>
                <value>
                    <fullName>Waiting for LOI Signature</fullName>
                </value>
                <value>
                    <fullName>Due Diligence</fullName>
                </value>
                <value>
                    <fullName>Contract Negotiation</fullName>
                </value>
                <value>
                    <fullName>Waiting for Signed Purchase Agreement</fullName>
                </value>
                <value>
                    <fullName>Closed - Executed</fullName>
                </value>
                <value>
                    <fullName>Closed - Copado Pass</fullName>
                </value>
                <value>
                    <fullName>Closed - Target Pass</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategy_Score_Reasoning__c</fullName>
        <label>Strategy Score Reasoning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strategy_Score__c</fullName>
        <label>Strategy Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Received_Contract_Redlines__c</fullName>
        <label>Target Received Contract Redlines</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Sheet_Deadline_Countdown_Days__c</fullName>
        <formula>DATETIMEVALUE(Exclusivity_Expiration__c) - NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Sheet Deadline Countdown (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_Sheet_Highlights__c</fullName>
        <inlineHelpText>For convenience, some key terms of the Term Sheet can be summarized here.</inlineHelpText>
        <label>Key Term Sheet Terms</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Funding_Amount__c</fullName>
        <inlineHelpText>Please make sure the Currency is correct i.e. that it is set to the record&apos;s currency value.</inlineHelpText>
        <label>Total Funding Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <formula>VALUE(TEXT(Strategy_Score__c)) +
VALUE(TEXT(Finance_Score__c)) +
VALUE(TEXT(Operations_Score__c)) +
VALUE(TEXT(Product_Score__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>M&amp;A Opportunity</label>
    <listViews>
        <fullName>Active_Opportunities</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>Next_Contact__c</columns>
        <columns>Next_Step__c</columns>
        <columns>ARR__c</columns>
        <columns>ASP__c</columns>
        <columns>Growth_Rate__c</columns>
        <columns>Insight_in_Contact__c</columns>
        <columns>Copado_in_Contact__c</columns>
        <columns>Strategy_Score__c</columns>
        <columns>Product_Score__c</columns>
        <columns>Finance_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Active Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code_Name__c</columns>
        <columns>Category__c</columns>
        <columns>Quality_Gate__c</columns>
        <columns>Stage__c</columns>
        <columns>Total_Score__c</columns>
        <columns>Next_Contact__c</columns>
        <columns>Next_Step__c</columns>
        <columns>Latest_Financials_Date__c</columns>
        <columns>Analysis_Date__c</columns>
        <columns>ARR__c</columns>
        <columns>ASP__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cancelled_Opps</fullName>
        <columns>NAME</columns>
        <columns>Lost_Reason__c</columns>
        <columns>Total_Funding_Amount__c</columns>
        <columns>Employees__c</columns>
        <columns>Category__c</columns>
        <columns>Quality_Gate__c</columns>
        <columns>Stage__c</columns>
        <columns>Total_Score__c</columns>
        <columns>Next_Contact__c</columns>
        <columns>Next_Step__c</columns>
        <columns>ARR__c</columns>
        <columns>ASP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed - Copado Pass,Closed - Target Pass</value>
        </filters>
        <label>Cancelled Opps</label>
    </listViews>
    <listViews>
        <fullName>Created_7_Days</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Quality_Gate__c</columns>
        <columns>Stage__c</columns>
        <columns>Next_Contact__c</columns>
        <columns>Next_Step__c</columns>
        <columns>Latest_Financials_Date__c</columns>
        <columns>Analysis_Date__c</columns>
        <columns>ARR__c</columns>
        <columns>ASP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Created 7 Days</label>
    </listViews>
    <listViews>
        <fullName>Follow_ups</fullName>
        <columns>NAME</columns>
        <columns>Code_Name__c</columns>
        <columns>Category__c</columns>
        <columns>Quality_Gate__c</columns>
        <columns>Stage__c</columns>
        <columns>Total_Score__c</columns>
        <columns>Next_Contact__c</columns>
        <columns>Next_Step__c</columns>
        <columns>Latest_Financials_Date__c</columns>
        <columns>Analysis_Date__c</columns>
        <columns>ARR__c</columns>
        <columns>ASP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Next_Contact__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Follow ups</label>
    </listViews>
    <listViews>
        <fullName>Follow_ups_NEXT_7_DAYS</fullName>
        <columns>NAME</columns>
        <columns>Code_Name__c</columns>
        <columns>Category__c</columns>
        <columns>Quality_Gate__c</columns>
        <columns>Stage__c</columns>
        <columns>Total_Score__c</columns>
        <columns>Next_Contact__c</columns>
        <columns>Next_Step__c</columns>
        <columns>Latest_Financials_Date__c</columns>
        <columns>Analysis_Date__c</columns>
        <columns>ARR__c</columns>
        <columns>ASP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Next_Contact__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Next_Contact__c</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <label>Follow ups NEXT 7 DAYS</label>
    </listViews>
    <listViews>
        <fullName>Modified_7_Days</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Quality_Gate__c</columns>
        <columns>Stage__c</columns>
        <columns>Next_Contact__c</columns>
        <columns>Next_Step__c</columns>
        <columns>Latest_Financials_Date__c</columns>
        <columns>Analysis_Date__c</columns>
        <columns>ARR__c</columns>
        <columns>ASP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Modified 7 Days</label>
    </listViews>
    <nameField>
        <label>M&amp;A Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>M&amp;A Opportunities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>